--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Welcome to My Website</h1>
     <p>This is a sample HTML page.</p>
+    <img src="images/firefox-icon.png" alt="Firefox image" />
     
 </body>
 </html>
